--- a/index.html
+++ b/index.html
@@ -611,19 +611,25 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
     .services-content { padding-right: 3.5rem; }
 }
 
+.centered {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 </style>
 
+<!--  MAIN FILE HTML OF SITE  -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Max White</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -634,23 +640,23 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                 <div class="home-social">
                     <span class="home-social-follow">Follow Me</span>
                     <div class="home-social-links">
-                        <a href="https://www.facebook.com" target="_blank" class="home-social-link">
+                        <a href="https://www.facebook.com" rel="noopener noreferrer" target="_blank" class="home-social-link">
                             <i class="uil uil-facebook-f"></i>
                         </a>
 
-                        <a href="https://www.instagram.com" target="_blank" class="home-social-link">
+                        <a href="https://www.instagram.com" rel="noopener noreferrer" target="_blank" class="home-social-link">
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="https://www.x.com" target="_blank" class="home-social-link">
+                        <a href="https://www.x.com" rel="noopener noreferrer" target="_blank" class="home-social-link">
                             <i class="uil uil-twitter"></i>
                         </a>
                     </div>
                 </div>
 
                 <img src="https://i.postimg.cc/3NgvPcZD/home-img.png" alt="" class="home-img">
-                <center>
-            <div class="home-data">
+                
+            <div class="home-data" style="margin-left:auto; margin-right:auto; text-align:center;">
                 <img src="https://i.imgur.com/xdPgto8.png" alt="Roblox" class="aabout-img"><br><br>
                 <h1 class="home-title">Hi, I'm Max</h1>
                 <h3 class="home-subtitle">Roblox Game Creator</h3>
@@ -659,10 +665,10 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                     <i class="uil uil-user button-icon"></i>
                     Konto roblox!
                 </a>
-            </div></center>
+            </div>
 
 
-            <div class="my-info">
+            <div class="my-info" >
                 <div class="info-item">
                     <i class="uil uil-server info-icon"></i>
 
