--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                 <p class="home-description">I am a long-time developer, creator, and programmer on Roblox, creating and helping others with their projects.</p>
                 <a href="https://www.roblox.com/users/73173655/profile" class="button">
                     <i class="uil uil-user button-icon"></i>
-                    Konto roblox!
+                    Roblox account!
                 </a>
             </div>
 
