--- a/index.html
+++ b/index.html
@@ -960,9 +960,9 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
 
             <div class="work-container container grid">
                 <div class="work-card mix web">
-                    <img src="https://i.imgur.com/ScfubR2.png" alt="" class="work-img">
+                    <img src="https://i.imgur.com/LqmumF3.png" alt="" class="work-img">
                     <h3 class="work-title">Parlament RP</h3>
-                    <span class="work-button"><img src="https://sejmroblox.pl" alt="">Site<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work"><img src="https://sejmroblox.pl" alt="">Site<i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">The services we provide for design</h3>
