--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                 <div class="work-card mix web">
                     <img src="https://i.imgur.com/LqmumF3.png" alt="" class="work-img">
                     <h3 class="work-title">Parlament RP</h3>
-                    <span class="work"><img src="https://sejmroblox.pl" alt="">Site<i class="uil uil-arrow-right work-button-icon"></i></span>
+                    <span class="work"><a href="https://sejmroblox.pl" alt="">Site</a><i class="uil uil-arrow-right work-button-icon"></i></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">The services we provide for design</h3>
