--- a/index.html
+++ b/index.html
@@ -617,7 +617,14 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
     text-align: center;
 }
 
-.work { color: var(--skin-color); font-size: var(--small-font-size); display: flex; align-items: center; column-gap: .25rem; cursor: pointer; }
+.work { 
+    color: var(--skin-color); 
+    font-size: var(--small-font-size); 
+    display: flex; 
+    align-items: center; 
+    column-gap: .25rem; 
+    cursor: pointer; 
+}
 
 </style>
 
@@ -964,7 +971,7 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                 <div class="work-card mix web">
                     <img src="https://i.imgur.com/LqmumF3.png" alt="" class="work-img">
                     <h3 class="work-title">Parlament RP</h3>
-                    <span class="work"><a href="https://sejmroblox.pl" alt="" style="color:rgb(255, 0, 0);">Site <i class="uil uil-arrow-right work-button-icon"></i></a></span>
+                    <span class="work"><a href="https://sejmroblox.pl" alt="" >Site <i class="uil uil-arrow-right work-button-icon"></a></span>
 
                     <div class="portfolio-item-details">
                         <h3 class="details-title">The services we provide for design</h3>
