--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,14 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
                         <h4>Create for you game server</h4>
                     </div>
                 </div>
+
+                <div class="services-content">
+                    <div>
+                        <i class="uil uil-cloud-check"></i>
+                        <h3 class="services-title">Roblox Games</h3>
+                        <h4>Edit/Create/Support your game</h4>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
