--- a/index.html
+++ b/index.html
@@ -1039,7 +1039,7 @@ textarea.input { padding: 0.8rem 1.2rem; min-height: 140px; border-radius: .5rem
 
                 <div class="services-content">
                     <div>
-                        <i class="uil uil-cloud-check"></i>
+                        <i class="uil uil-cloud-check services-icon"></i>
                         <h3 class="services-title">Roblox Games</h3>
                         <h4>Edit/Create/Support your game</h4>
                     </div>
